# mcp-fair-shake

./: .gitignore  CLAUDE.md  Makefile  README.md  TESTING.md  debug_parser.py  debug_parser2.py  debug_parser3.py  mcp-config.json  pyproject.toml
.serena/: project.yml
data/legislation/graph/: aca-1985-graph.json  eoa-2010-graph.json  fwa-2009-graph.json  fwa-2009-unfair-dismissal.json  fwr-2009-graph.json  lsl-2018-graph.json  ma-000005-graph.json  ohs-2004-graph.json  top-level-acts.json  wca-1958-graph.json
data/legislation/structured/: aca-1985-registry.json  eoa-2010-registry.json  extraction_stats.json  fwa-2009.json  fwr-2009.json  lsl-2018-registry.json  ma-000005.json  ohs-2004-registry.json  wca-1958-registry.json
data/support-pathways/: agencies.json
docs/: ARCHITECTURE_REDESIGN.md  NEXT_STEPS.md  REQUIREMENTS.md  ROADMAP.md  SPECIFICATION.md  arxiv-mcp-analysis.md  context7-analysis.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: D3ForceGraph.tsx  DeckGLGraph.tsx  GraphView.tsx
src/mcp_fair_shake/: __init__.py  api.py  cache.py  canonical_id.py  cli.py  cross_references.py  deadlines.py  fetcher.py  parquet_storage.py  server.py  summaries.py  updates.py
src/mcp_fair_shake/models/: __init__.py  legislation.py
src/mcp_fair_shake/parsers/: __init__.py  base.py  federal_text.py  registry.py  victorian_text.py
tests/: __init__.py  conftest.py  test_cache.py  test_canonical_id.py  test_deadlines.py  test_federal_text_parser.py  test_fetcher.py  test_fetcher_integration.py  test_graph_data.py  test_html_parser.py  test_models.py  test_pdf_parser.py  test_playwright_fetcher.py  test_server.py  test_tools.py  test_victorian_parser.py
tests/fixtures/: fwa-2009-sample.txt  sample_victorian_ohs.txt
(+24 files in other folders)
