[project]
name = "mcp-fair-shake"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for fair evaluation and assessment"
readme = "README.md"
authors = [
    { name = "Josh Peak", email = "joshpeak05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.9.0",
    "inline-snapshot>=0.15.0",
]

[project.scripts]
mcp-fair-shake = "mcp_fair_shake.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT"]
ignore = ["E731"]  # Allow lambda assignments per project conventions

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/mcp_fair_shake",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/mcp_fair_shake"]
omit = ["*/tests/*", "*/__pycache__/*", "*/cli.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "inline-snapshot>=0.31.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
